--- a/app/src/main/res/layout/activity_koubei.xml
+++ b/app/src/main/res/layout/activity_koubei.xml
@@ -4,13 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.MainActivity">
+    tools:context=".ui.KoubeiActivity">
 
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/recycler"/>
-
-
+        android:id="@+id/koubei_recycler"
+        />
 </android.support.constraint.ConstraintLayout>
