--- a/app/src/main/res/layout/koubei_list_item.xml
+++ b/app/src/main/res/layout/koubei_list_item.xml
@@ -8,20 +8,24 @@
         android:id="@+id/header_layout"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:padding="15dp"
+        android:background="@drawable/layout_bottom_shape"
         android:orientation="horizontal"
+
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/user_img"
             android:layout_width="50dp"
-            android:layout_height="50dp" />
+            android:layout_height="50dp"
+            android:layout_marginRight="15dp"
+            android:layout_gravity="center_vertical" />
 
         <TextView
             android:id="@+id/name"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical" />
 
         <TextView
             android:id="@+id/create_time"
@@ -30,18 +34,27 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/content"
+        android:id="@+id/advantage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minHeight="100dp"
+        android:paddingTop="20dp"
+        android:paddingBottom="20dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/header_layout" />
 
+    <TextView
+        android:id="@+id/shortcoming"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="20dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/advantage" />
+
     <GridView
         android:id="@+id/gridview"
-        app:layout_constraintTop_toBottomOf="@+id/content"
         android:layout_width="match_parent"
-        android:layout_height="500dp"
-        android:numColumns="3" />
+        android:layout_height="200dp"
+        android:numColumns="3"
+        app:layout_constraintTop_toBottomOf="@+id/shortcoming" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
