--- a/app/src/main/res/layout/koubei_list_item.xml
+++ b/app/src/main/res/layout/koubei_list_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -8,6 +8,7 @@
         android:id="@+id/header_layout"
         android:layout_width="match_parent"
         android:layout_height="60dp"
+        android:layout_alignParentTop="true"
         android:background="@drawable/layout_bottom_shape"
         android:orientation="horizontal"
 
@@ -18,8 +19,8 @@
             android:id="@+id/user_img"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_marginRight="15dp"
-            android:layout_gravity="center_vertical" />
+            android:layout_gravity="center_vertical"
+            android:layout_marginRight="15dp" />
 
         <TextView
             android:id="@+id/name"
@@ -27,34 +28,28 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical" />
 
-        <TextView
-            android:id="@+id/create_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+
     </LinearLayout>
 
     <TextView
         android:id="@+id/advantage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/header_layout"
         android:paddingTop="20dp"
-        android:paddingBottom="20dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/header_layout" />
+        android:paddingBottom="20dp" />
 
     <TextView
         android:id="@+id/shortcoming"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="20dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/advantage" />
+        android:layout_below="@+id/advantage"
+        android:paddingBottom="20dp" />
 
     <GridView
         android:id="@+id/gridview"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:numColumns="3"
-        app:layout_constraintTop_toBottomOf="@+id/shortcoming" />
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/shortcoming" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
