--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -1,23 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="80dp">
+
+    <TextView
+
+        android:id="@+id/number"
+        android:layout_width="30dp"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="15dp"
+        android:background="#72000000"
+        android:gravity="center"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:layout_width="150dp"
-        android:layout_height="match_parent"
         android:id="@+id/image1"
+        android:layout_width="70dp"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="15dp"
         android:scaleType="centerCrop"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/number"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
-        app:layout_constraintLeft_toRightOf="@+id/image1"
-        app:layout_constraintTop_toTopOf="parent"
+        android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="33sp"
-        android:id="@+id/title"
-        />
+        android:layout_margin="15dp"
+        android:textSize="20sp"
+        app:layout_constraintLeft_toRightOf="@+id/image1"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
