--- a/app/src/main/res/layout/koubei_list_item.xml
+++ b/app/src/main/res/layout/koubei_list_item.xml
@@ -2,13 +2,15 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:id="@+id/header_layout"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_alignParentTop="true"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
         android:background="@drawable/layout_bottom_shape"
         android:orientation="horizontal"
 
@@ -19,11 +21,11 @@
             android:id="@+id/user_img"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginRight="15dp" />
+            android:layout_gravity="center_vertical" />
 
         <TextView
             android:id="@+id/name"
+            android:layout_marginLeft="15dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical" />
@@ -50,6 +52,10 @@
         android:id="@+id/gridview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/shortcoming" />
+        android:verticalSpacing="3dp"
+        android:horizontalSpacing="3dp"
+        android:layout_below="@+id/shortcoming"
+        android:layout_marginBottom="15dp"
+        android:numColumns="3" />
 
 </RelativeLayout>
