--- a/redpoint/src/main/res/layout/activity_main.xml
+++ b/redpoint/src/main/res/layout/activity_main.xml
@@ -9,12 +9,12 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="20dp"
         android:orientation="horizontal">
 
         <com.example.redpoint.RedPoint
             android:id="@+id/red_point"
-            android:layout_width="wrap_content"
+            android:layout_width="30dp"
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
