--- a/app/src/main/res/layout/koubei_list_item.xml
+++ b/app/src/main/res/layout/koubei_list_item.xml
@@ -52,6 +52,7 @@
     <com.example.library.GridViewLayout
         android:id="@+id/gridview"
         android:layout_width="match_parent"
+        android:layout_below="@+id/shortcoming"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp" />
+        android:layout_margin="5dp" />
 </RelativeLayout>
