fixed 序号 固定宽度下文字大小不变的问题，使用Autosizeing 处理

--- a/MMoto/src/main/res/layout/item.xml
+++ b/MMoto/src/main/res/layout/item.xml
@@ -8,17 +8,22 @@
 
         android:id="@+id/number"
         android:layout_width="30dp"
-        android:layout_height="match_parent"
+        android:layout_height="80dp"
         android:layout_marginLeft="15dp"
+        android:autoSizeTextType="uniform"
         android:background="#72000000"
         android:gravity="center"
+        android:maxLines="1"
+        android:text="GGG"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 
     <ImageView
         android:id="@+id/image1"
         android:layout_width="70dp"
-        android:layout_height="match_parent"
+        android:layout_height="70dp"
         android:layout_marginLeft="15dp"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
