--- a/MMoto/src/main/res/layout/item.xml
+++ b/MMoto/src/main/res/layout/item.xml
@@ -7,14 +7,15 @@
     <TextView
 
         android:id="@+id/number"
-        android:layout_width="30dp"
+        android:layout_width="25dp"
         android:layout_height="80dp"
+
         android:layout_marginLeft="15dp"
         android:autoSizeTextType="uniform"
         android:background="#72000000"
         android:gravity="center"
         android:maxLines="1"
-        android:text="GGG"
+        android:text="000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
