--- a/MMoto/src/main/res/layout/activity_koubei.xml
+++ b/MMoto/src/main/res/layout/activity_koubei.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.example.library.LoadingLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.example.library.views.LoadingLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/loadingLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -25,4 +25,4 @@
     </FrameLayout>
 
 
-</com.example.library.LoadingLayout>
+</com.example.library.views.LoadingLayout>
