--- a/MMoto/src/main/res/layout/activity_main.xml
+++ b/MMoto/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.example.library.LoadingLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.example.library.views.LoadingLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -29,4 +29,4 @@
 
     </LinearLayout>
 
-</com.example.library.LoadingLayout>
+</com.example.library.views.LoadingLayout>
